several styles refinements: 2026-02-08

--- a/project/CURK/intelligent-parrot.html
+++ b/project/CURK/intelligent-parrot.html
@@ -367,16 +367,14 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="mb-12 text-center">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-6">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         지능적 앵무새의 탄생
                     </h1>
-                    <p class="text-xl themeable-subtitle mb-4">
-                        LLM 지능 논쟁의 포괄적 분석: 인지적 한계와 창발적 가능성의 변증법
-                    </p>
+                    <p class="text-xl themeable-text mb-8">LLM 지능 논쟁의 포괄적 분석: 인지적 한계와 창발적 가능성의 변증법</p>
 
                     <!-- 발행 정보 -->
-                    <div class="flex items-center justify-center gap-4 text-sm themeable-text-muted mb-8">
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
                         <span id="publish-date"></span>
                         <span>•</span>
                         <span id="publisher"></span>
@@ -384,7 +382,6 @@
                         <span id="reading-time">읽는 시간: 약 20분</span>
                     </div>
 
-                    <!-- Share Buttons Placeholder -->
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
 
