--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -988,25 +988,22 @@
 
     <div class="container-custom">
         <!-- Header -->
-        <header class="mb-8">
-            <h1 class="text-3xl md:text-5xl font-bold text-white mb-4 text-center">
+        <header class="text-left mb-12">
+            <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                 ISO 표준에서 온톨로지 추출하기
             </h1>
-            <p class="text-xl md:text-2xl text-slate-400 mb-6 text-center">
-                ISO/IEC 5259-2 데이터 품질 표준 사례 연구
-            </p>
+            <p class="text-xl themeable-text mb-8">ISO/IEC 5259-2 데이터 품질 표준 사례 연구</p>
 
             <!-- 발행 정보 -->
-            <div class="flex flex-wrap justify-center items-center gap-2 text-sm text-slate-400 mb-8">
+            <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
                 <span>발행일: 2025년 11월 1일</span>
-                <span class="text-slate-600">|</span>
-                <span>리서치: <a href="mailto:contact@pebblous.ai">페블러스 데이터 커뮤니케이션 팀</a></span>
-                <span class="text-slate-600">|</span>
+                <span>•</span>
+                <span>기획: 페블러스 데이터 커뮤니케이션 팀</span>
+                <span>•</span>
                 <span>읽는 시간: 약 20분</span>
             </div>
 
-            <!-- 공유하기 -->
-            <div id="share-buttons-placeholder" class="mb-8"></div>
+            <div id="share-buttons-placeholder" class="flex justify-start"></div>
 
             <!-- 개요 -->
             <div class="card p-6 mb-8">
