--- a/project/DataClinic/data-greenhouse.html
+++ b/project/DataClinic/data-greenhouse.html
@@ -640,12 +640,20 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         페블러스 데이터 그린하우스
                     </h1>
-                    <p class="text-xl themeable-text mb-2">Neuro-Symbolic AI 기반 데이터 운영 인프라의 새로운 표준</p>
-                    <p class="text-sm themeable-muted">버전 0.1 | 2025년 12월</p>
+                    <p class="text-xl themeable-text mb-8">Neuro-Symbolic AI 기반 데이터 운영 인프라의 새로운 표준</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 15분</span>
+                    </div>
 
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
