--- a/project/ISO25024/iso-25024-test-01.html
+++ b/project/ISO25024/iso-25024-test-01.html
@@ -262,15 +262,20 @@
     <div id="header-placeholder"></div>
 
     <div class="container-custom">
-        <header class="mb-8 mt-6">
-            <h1 class="text-3xl md:text-4xl font-bold themeable-heading mb-3">ISO/IEC 25024 데이터 품질 측정 실습</h1>
+        <header class="text-left mb-12">
+            <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">ISO/IEC 25024 데이터 품질 측정 실습</h1>
+            <p class="text-xl themeable-text mb-8">5가지 핵심 품질 항목 SQL 쿼리 튜토리얼</p>
 
             <!-- 발행 정보 -->
-            <div class="flex flex-wrap items-center gap-2 text-sm themeable-muted mb-6">
-                <span>발행일: 2025년 10월 26일</span>
-                <span class="themeable-border">|</span>
-                <span>리서치: 페블러스 데이터 커뮤니케이션 팀</span>
+            <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                <span id="publish-date"></span>
+                <span>•</span>
+                <span id="publisher"></span>
+                <span>•</span>
+                <span id="reading-time">읽는 시간: 약 10분</span>
             </div>
+
+            <div id="share-buttons-placeholder" class="flex justify-start"></div>
 
             <!-- 개요 -->
             <div class="themeable-card rounded-lg p-6 mb-8 border">
