--- a/project/ISO5259/5259-pbls-dataclinic-01.html
+++ b/project/ISO5259/5259-pbls-dataclinic-01.html
@@ -185,20 +185,22 @@
                 <!-- Breadcrumbs will be injected by PebblousPage.init() -->
                 <div id="breadcrumbs"></div>
 
-                <header class="mb-12">
-                    <h1 id="main-title" class="text-4xl md:text-5xl font-bold text-white mb-4 leading-tight">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         AI 데이터 품질 표준과 페블러스 데이터클리닉
                     </h1>
-                    <p id="subtitle" class="text-xl md:text-2xl text-slate-300 mb-6 leading-relaxed">
-                        ISO/IEC 5259-2 품질측정기준(QM)과의 정량적 매핑 분석
-                    </p>
-                    <div class="flex items-center gap-4 text-sm themeable-muted mb-4">
+                    <p class="text-xl themeable-text mb-8">ISO/IEC 5259-2 품질측정기준(QM)과의 정량적 매핑 분석</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
                         <span id="publish-date"></span>
                         <span>•</span>
                         <span id="publisher"></span>
                         <span>•</span>
                         <span id="reading-time">읽는 시간: 약 15분</span>
                     </div>
+
+                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
 
                 <!-- Executive Summary -->
