--- a/project/ISO5259/iso5259-standardization-roadmap.html
+++ b/project/ISO5259/iso5259-standardization-roadmap.html
@@ -537,12 +537,20 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         데이터 품질 표준화 및 글로벌 인증 로드맵
                     </h1>
-                    <p class="text-xl themeable-text mb-2">ISO/IEC 5259를 중심으로</p>
-                    <p class="text-sm themeable-muted">최종 업데이트: 2025년 12월</p>
+                    <p class="text-xl themeable-text mb-8">ISO/IEC 5259를 중심으로</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 20분</span>
+                    </div>
 
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
@@ -1018,6 +1026,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "ISO/IEC 5259 데이터 품질 표준화 전략 | AI 인증 로드맵 | 페블러스",
+                publishDate: "2025년 12월 26일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "standards",
                 articlePath: "project/ISO5259/iso5259-standardization-roadmap.html",
