--- a/project/PhysicalAI/physical-ai.html
+++ b/project/PhysicalAI/physical-ai.html
@@ -603,12 +603,20 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         피지컬 AI(Physical AI)란?
                     </h1>
-                    <p class="text-xl themeable-text mb-2">LLM과 VLA의 차이, 그리고 데이터 전략</p>
-                    <p class="text-sm themeable-muted">최종 업데이트: 2025년 12월</p>
+                    <p class="text-xl themeable-text mb-8">LLM과 VLA의 차이, 그리고 데이터 전략</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 15분</span>
+                    </div>
 
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
@@ -1370,6 +1378,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "피지컬 AI(Physical AI)란? LLM과 VLA의 차이, 그리고 데이터 전략 | 페블러스",
+                publishDate: "2025년 12월 27일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "tech",
                 articlePath: "project/PhysicalAI/physical-ai.html",
