--- a/report/blog-2025-review/index.html
+++ b/report/blog-2025-review/index.html
@@ -509,12 +509,22 @@
                 </nav>
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         페블러스 블로그 2025년 결산
                     </h1>
-                    <p class="text-xl themeable-text mb-2">3개월간의 집중 개발로 탄생한 블로그의 여정</p>
-                    <p class="text-sm themeable-muted">작성일: 2025-12-28 | 기간: 2025.09.21 ~ 2025.12.28 (약 3개월)</p>
+                    <p class="text-xl themeable-text mb-8">3개월간의 집중 개발로 탄생한 블로그의 여정</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 10분</span>
+                    </div>
+
+                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
 
                 <!-- Key Stats Cards -->
@@ -1137,6 +1147,8 @@
 
             const config = {
                 pageTitle: "페블러스 블로그 2025년 결산: 3개월간의 기록 | 페블러스",
+                publishDate: "2025년 12월 28일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "story",
                 articlePath: "report/blog-2025-review/index.html",
