--- a/report/solar-vs-glm/solar-vs-glm-forensic.html
+++ b/report/solar-vs-glm/solar-vs-glm-forensic.html
@@ -451,12 +451,22 @@
             <main class="max-w-[800px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         Solar-Open-100B vs GLM-4.5-Air<br>모델 파생 논쟁의 포렌식
                     </h1>
-                    <p class="text-xl themeable-text mb-2">업스테이지와 커뮤니티의 적극적 검증으로 논란 종결</p>
-                    <p class="text-sm themeable-muted">2026년 1월 1일 (업데이트: 2026년 1월 4일) | 페블러스 데이터커뮤니케이션팀</p>
+                    <p class="text-xl themeable-text mb-8">업스테이지와 커뮤니티의 적극적 검증으로 논란 종결</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 20분</span>
+                    </div>
+
+                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
 
                     <!-- Update Badge -->
                     <div class="inline-flex items-center gap-2 mt-4 px-4 py-2 rounded-full" style="background: linear-gradient(135deg, rgba(13, 148, 136, 0.15), rgba(248, 104, 37, 0.15)); border: 1px solid var(--teal-color);">
@@ -1416,6 +1426,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "Solar-Open-100B vs GLM-4.5-Air 모델 파생 논쟁의 포렌식 | 페블러스",
+                publishDate: "2026년 1월 1일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "tech",
                 articlePath: "report/solar-vs-glm/solar-vs-glm-forensic.html",
