--- a/project/AADS/qa-statistics.html
+++ b/project/AADS/qa-statistics.html
@@ -120,7 +120,7 @@
 
         <!-- SECTION 1: HEADER & KPIs -->
         <!-- Goal: Inform -->
-        <header id="overview" class="text-center space-y-4">
+        <header id="overview" class="text-left space-y-4">
             <h1 class="text-4xl md:text-5xl font-black text-gray-900 leading-tight">
                 2024 Data Classification <span class="text-blue-600">Analysis Report</span>
             </h1>
