--- a/project/App/text-audit-01.html
+++ b/project/App/text-audit-01.html
@@ -508,7 +508,7 @@
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12">
         <div class="themeable-card border themeable-border rounded-xl shadow-2xl p-6 md:p-10 max-w-[1920px] mx-auto">
 
-            <header class="mb-8 text-center">
+            <header class="mb-8 text-left">
                 <h1 class="text-3xl md:text-4xl font-bold themeable-text mb-3">LLM 학습용 데이터셋 뷰어</h1>
                 <p class="themeable-text-muted text-lg">CSV, Excel 또는 JSON 파일을 업로드하여 데이터를 확인하세요.</p>
             </header>
