--- a/project/CURK/ontology/enterprise-ontology-paradigm.html
+++ b/project/CURK/ontology/enterprise-ontology-paradigm.html
@@ -448,14 +448,22 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         엔터프라이즈 인텔리전스를 위한<br>온톨로지 패러다임의 전환
                     </h1>
-                    <p class="text-xl themeable-text mb-2">팔란티어와 전통적 시맨틱 웹 아키텍처의 비교 분석</p>
-                    <p class="text-sm themeable-muted">최종 업데이트: 2025년 12월</p>
-                
-                    <div id="share-buttons-placeholder"></div>
+                    <p class="text-xl themeable-text mb-8">팔란티어와 전통적 시맨틱 웹 아키텍처의 비교 분석</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 15분</span>
+                    </div>
+
+                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
 
                 <!-- Section 1: 서론 -->
@@ -1111,6 +1119,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "엔터프라이즈 온톨로지 패러다임의 전환: 시맨틱 웹에서 팔란티어까지 | 페블러스",
+                publishDate: "2025년 12월 25일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "tech",
                 articlePath: "project/CURK/ontology/enterprise-ontology-paradigm.html",
