--- a/project/DataClinic/data-greenhouse-investment.html
+++ b/project/DataClinic/data-greenhouse-investment.html
@@ -606,20 +606,23 @@
             </nav>
 
             <!-- Hero Section -->
-            <header class="text-center mb-12">
-                <h1 class="text-3xl md:text-4xl font-bold themeable-heading mb-4 leading-tight">
-                    <span class="accent-text">Pebblous Data Greenhouse</span><br>
-                    비즈니스 및 투자유치 전략 보고서
+            <header class="text-left mb-12">
+                <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                    Pebblous Data Greenhouse<br>비즈니스 및 투자유치 전략 보고서
                 </h1>
-                <p class="text-lg themeable-text mb-4">AI 데이터 운영 체계를 제품화한다</p>
-                <div class="flex flex-wrap justify-center gap-2 text-sm">
-                    <span class="px-3 py-1 rounded-full themeable-card">📅 2025-12-28</span>
-                    <span class="px-3 py-1 rounded-full themeable-card">📄 버전 0.1</span>
-                    <span class="px-3 py-1 rounded-full themeable-card">🔒 비공개</span>
+                <p class="text-xl themeable-text mb-8">AI 데이터 운영 체계를 제품화한다</p>
+
+                <!-- 발행 정보 -->
+                <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                    <span>발행일: 2025년 12월 28일</span>
+                    <span>•</span>
+                    <span>기획: (주)페블러스 데이터 커뮤니케이션팀</span>
+                    <span>•</span>
+                    <span>🔒 비공개</span>
                 </div>
 
-                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
-                </header>
+                <div id="share-buttons-placeholder" class="flex justify-start"></div>
+            </header>
 
             <!-- Section 1: Investment Summary -->
             <section id="summary" class="mb-12">
