--- a/project/IR/pitchbook-ai-outlook-analysis.html
+++ b/project/IR/pitchbook-ai-outlook-analysis.html
@@ -411,16 +411,20 @@
             <main class="max-w-[700px] px-4 sm:px-6">
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <div class="inline-block px-4 py-1 rounded-full text-sm font-medium mb-4" style="background: rgba(248, 104, 37, 0.1); color: var(--accent-color);">
-                        Business Insight
-                    </div>
-                    <h1 class="text-3xl md:text-4xl font-bold themeable-heading mb-4 leading-tight">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         페블러스 사업 전망 분석
                     </h1>
-                    <p class="text-xl themeable-text mb-2">PitchBook '2026 AI Outlook' 관점</p>
-                    <p class="text-sm themeable-muted mb-4">기획: 페블러스 데이터커뮤니케이션팀</p>
-                    <p class="text-sm themeable-muted">작성일: 2025년 12월 13일</p>
+                    <p class="text-xl themeable-text mb-8">PitchBook '2026 AI Outlook' 관점</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 10분</span>
+                    </div>
 
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
@@ -960,6 +964,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "페블러스 사업 전망 분석: PitchBook '2026 AI Outlook' 관점 | 페블러스",
+                publishDate: "2025년 12월 13일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "business",
                 articlePath: "project/IR/pitchbook-ai-outlook-analysis.html",
