--- a/project/NeuroSymbolicAI/neuro-symbolic-ai-architecture.html
+++ b/project/NeuroSymbolicAI/neuro-symbolic-ai-architecture.html
@@ -553,10 +553,12 @@
             <!-- Main Article -->
             <main class="w-full lg:max-w-[700px] lg:mx-auto">
                 <!-- Hero Section -->
-                <header id="hero-section" class="text-center mb-12">
-                    <p class="text-sm font-medium text-orange-500 mb-3 tracking-wide">TECH REPORT</p>
-                    <h1 id="page-h1-title" class="text-3xl md:text-4xl lg:text-5xl font-bold themeable-heading leading-tight mb-4"></h1>
-                    <div class="flex items-center justify-center gap-4 text-sm themeable-text-muted mb-4">
+                <header id="hero-section" class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;"></h1>
+                    <p id="hero-subtitle" class="text-xl themeable-text mb-8"></p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
                         <span id="publish-date"></span>
                         <span>•</span>
                         <span id="publisher"></span>
@@ -564,7 +566,7 @@
                         <span id="reading-time">읽는 시간: 약 35분</span>
                     </div>
 
-                    <div id="share-buttons-placeholder" class="mb-8"></div>
+                    <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
 
                 <!-- Section 1: Introduction -->
