--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -596,22 +596,22 @@
         </nav>
 
         <!-- Hero Section -->
-        <header class="text-center mb-16">
-            <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
+        <header class="text-left mb-12">
+            <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                 피지컬 AI 데이터 파이프라인 구축 전략
             </h1>
+            <p class="text-xl themeable-text mb-8">제조 혁신을 위한 AI-Ready 데이터 솔루션</p>
 
             <!-- 발행 정보 -->
-            <div class="flex flex-wrap justify-center items-center gap-2 text-sm text-slate-400 mb-8">
-                <span>작성일: 2025년 11월 6일</span>
-                <span class="text-slate-600">|</span>
-                <span>기획: <a href="mailto:contact@pebblous.ai">(주)페블러스 데이터 커뮤니케이션 팀</a></span>
-                <span class="text-slate-600">|</span>
-                <span>읽는 시간: 약 15분</span>
+            <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                <span id="publish-date"></span>
+                <span>•</span>
+                <span id="publisher"></span>
+                <span>•</span>
+                <span id="reading-time">읽는 시간: 약 15분</span>
             </div>
 
-            <!-- 공유하기 -->
-            <div id="share-buttons-placeholder" class="mb-8"></div>
+            <div id="share-buttons-placeholder" class="flex justify-start"></div>
         </header>
 
         <!-- Executive Summary -->
