--- a/project/PhysicalAI/physical-ai-competition-strategy.html
+++ b/project/PhysicalAI/physical-ai-competition-strategy.html
@@ -466,13 +466,20 @@
                 </nav>
 
                 <!-- Hero Section -->
-                <header class="text-center mb-12">
-                    <h1 class="hero-title font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                <header class="text-left mb-12">
+                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         피지컬 AI 시대의 패권 경쟁
                     </h1>
-                    <p class="text-xl themeable-text mb-2">데이터 중심 생존 전략과 페블러스의 역할</p>
-                    <p class="text-sm themeable-muted mb-4">기획: 페블러스 데이터커뮤니케이션팀 | 대상: C-Level, R&D 전략</p>
-                    <p class="text-sm themeable-muted">작성일: 2025년 12월</p>
+                    <p class="text-xl themeable-text mb-8">데이터 중심 생존 전략과 페블러스의 역할</p>
+
+                    <!-- 발행 정보 -->
+                    <div class="flex items-center gap-4 text-sm themeable-muted mb-2">
+                        <span id="publish-date"></span>
+                        <span>•</span>
+                        <span id="publisher"></span>
+                        <span>•</span>
+                        <span id="reading-time">읽는 시간: 약 15분</span>
+                    </div>
 
                     <div id="share-buttons-placeholder" class="flex justify-start"></div>
                 </header>
@@ -1136,6 +1143,8 @@
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
                 pageTitle: "피지컬 AI 시대의 패권 경쟁: 데이터 중심 생존 전략과 페블러스의 역할 | 페블러스",
+                publishDate: "2025년 12월 25일",
+                publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 defaultTheme: "light",
                 category: "tech",
                 articlePath: "project/PhysicalAI/physical-ai-competition-strategy.html",
