Claud CLI Test. #1

--- a/index.html
+++ b/index.html
@@ -354,6 +354,22 @@
 
         <!-- Posts Section -->
         <section id="posts" class="container mx-auto px-6 py-20">
+            <!-- View Toggle -->
+            <div id="view-toggle" class="flex justify-end items-center gap-2 mb-2">
+                <div class="view-toggle-group">
+                    <button id="view-card-btn" class="view-toggle-btn active" type="button" aria-label="카드 보기" title="카드 보기">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
+                        </svg>
+                    </button>
+                    <button id="view-list-btn" class="view-toggle-btn" type="button" aria-label="목록 보기" title="목록 보기">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
             <!-- Categories: Tech → Business → Art → Story (비즈니스 기여도 순) -->
             <div id="tech" class="mb-20 mt-32 relative">
                 <div class="absolute left-0 w-2 accent-bg" style="height: calc((8rem + 3rem) * 0.75); top: calc(-8rem + 2rem + (8rem + 3rem) * 0.125);"></div>
