code painting essay update

--- a/project/DAL/code-painting-essay/en/index.html
+++ b/project/DAL/code-painting-essay/en/index.html
@@ -214,7 +214,8 @@
             color: var(--text-tertiary);
             border-left: 3px solid var(--accent-color);
             padding-left: 1rem;
-            margin: 2rem 0;
+            margin: 2rem auto;
+            max-width: 42rem;
         }
 
         .essay-body {
@@ -249,7 +250,8 @@
             background: var(--bg-secondary);
             border-radius: 0.75rem;
             padding: 1.5rem 2rem;
-            margin: 2rem 0 3rem;
+            margin: 2rem auto 3rem;
+            max-width: 42rem;
         }
 
         .toc-title {
@@ -425,7 +427,8 @@
             text-align: center;
             padding: 4rem 0 3rem;
             border-bottom: 1px solid var(--border-color);
-            margin-bottom: 2rem;
+            max-width: 42rem;
+            margin: 0 auto 2rem;
         }
 
         .dal-badge {
@@ -614,14 +617,14 @@
         /* Side Navigation */
         .side-nav {
             position: fixed;
-            left: calc(50% - 32rem - 12rem);
+            left: calc(50% - 34rem);
             top: 50%;
             transform: translateY(-50%);
             z-index: 80;
             display: none;
         }
 
-        @media (min-width: 1200px) {
+        @media (min-width: 1280px) {
             .side-nav {
                 display: block;
             }
@@ -675,7 +678,7 @@
             opacity: 0.35;
             transition: all 0.3s ease;
             white-space: nowrap;
-            max-width: 180px;
+            max-width: 150px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
