--- a/project/CURK/ontology/enterprise-ontology-paradigm/ko/index.html
+++ b/project/CURK/ontology/enterprise-ontology-paradigm/ko/index.html
@@ -1118,6 +1118,8 @@
     <script>
         document.addEventListener('DOMContentLoaded', async function() {
             const config = {
+                mainTitle: "엔터프라이즈 인텔리전스를 위한 온톨로지 패러다임의 전환",
+                subtitle: "팔란티어와 전통적 시맨틱 웹 아키텍처의 비교 분석 및 AIP 기반의 확장성 연구",
                 pageTitle: "엔터프라이즈 온톨로지 패러다임의 전환: 시맨틱 웹에서 팔란티어까지 | 페블러스",
                 publishDate: "2025년 12월 25일",
                 publisher: "(주)페블러스 데이터 커뮤니케이션팀",
